{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "d154af26-c1ee-4299-bfe4-d48806611ccc",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "1fecc4fd-534c-4219-8368-7718a734bd41",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "e941430c-2aab-42f7-92af-60207b3d4a2a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "c27b79d4-1fbf-4673-80b8-4d31c7dc8fd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Prone",
                    "type": "Button",
                    "id": "2b92199e-81ad-4755-9913-f011c20d2067",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftLean",
                    "type": "Button",
                    "id": "8bfd4ac8-4c5f-42db-8a9f-df624969f38b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightLean",
                    "type": "Button",
                    "id": "4762e84a-e541-4665-83ef-0bb7351624cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "526e5406-0770-45dc-bee2-bcd29e76eeab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "3c8553cb-7845-434d-a75b-c451747b134c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c258923d-ac42-4082-bf16-088c47ca971e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "a7f000e6-ce6a-4cae-93e1-1ce94aeaafe3",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "71b56e48-cfaf-4da8-a2ba-2c7491f31d99",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "df2e5ffd-da37-43a9-861b-495da6f0726c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9e2762ec-bed8-45f5-81ec-460ad88fd683",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "262beea6-fc5c-4184-961b-1649cea45c2e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9d0ee9d5-0dae-4909-b07c-a34829aa4110",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "785571fa-9fe6-4b21-8693-03f66908ba4b",
                    "path": "<Keyboard>/c",
                    "interactions": "Hold(duration=0.1,pressPoint=0.15)",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a932e9d8-06e9-43e7-b91c-991489d8ccd2",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ba974ee-e105-420c-83ab-36138f2fc823",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftLean",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e058021c-af1c-4020-a77f-2e79dd8c1d25",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLean",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "729ae639-f44b-450f-98dd-ec9d94faf000",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold(duration=0.1,pressPoint=0.15)",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26d3814a-efaa-4148-8d13-bcc887b002a1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58e6e11d-7652-4501-b8be-318f2f5cb224",
                    "path": "<Keyboard>/alt",
                    "interactions": "Hold(duration=0.1,pressPoint=0.15)",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "4ca27abb-3841-4746-85c7-7553fc36ae3b",
            "actions": [
                {
                    "name": "TapFire1",
                    "type": "Button",
                    "id": "82246573-a423-4605-a5c0-ec52c9bec5fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldFire1",
                    "type": "Button",
                    "id": "6cdabde4-9d8b-462e-99d8-1ca70e58934a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapFire2",
                    "type": "Button",
                    "id": "0764c223-f03d-40f8-88ad-e48fef1d911d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldFire2",
                    "type": "Button",
                    "id": "389070b2-8f9b-42c3-affa-15121690976b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "1cf3d8e8-c222-4a68-9984-afbf6a2cd7d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Value",
                    "id": "062f71c8-cd32-4fb3-9325-8874dec2b0ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hide",
                    "type": "Button",
                    "id": "1215eea7-ddb5-4b13-88a3-7fd55623c955",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a79a1a6-ce6a-47ef-aad2-4667258fd5d7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapFire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7b74f90-d184-47f9-a493-d18e8fc4655c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.1,pressPoint=0.15)",
                    "processors": "",
                    "groups": "",
                    "action": "HoldFire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7028f6d-1705-475e-b20e-9c8bcb9fdd83",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.1,pressPoint=0.15)",
                    "processors": "",
                    "groups": "",
                    "action": "HoldFire2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf2713c8-688a-428d-a856-17fd6cdcb185",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapFire2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "822e13e1-e98d-484c-87de-bb1ea5f14bb8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "353fb153-ee45-4b31-b0f5-33c1136a4f2a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa23cd0f-0fda-4aa9-8572-cba5cb0fff41",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7fd880f-9896-4c60-8650-f6a613affb7b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78c38dcd-49d5-48fb-b37e-34a8d93e7011",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f6a3313-a1a1-447e-bb25-350aa1f65a4f",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "798e2bbd-b203-4861-840e-8583e1e8f58a",
            "actions": [
                {
                    "name": "ESC",
                    "type": "Button",
                    "id": "b05ce13b-102a-45e0-afd9-fb737acade73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee58bae6-f10f-4a49-bb05-24f29404d937",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ESC",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}